templates/helm-snowplow_template.yaml
---
# Source: helm-snowplow/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgres-hl
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgres
    helm.sh/chart: postgresql-11.9.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: helm-snowplow/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgres
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgres
    helm.sh/chart: postgresql-11.9.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: NodePort
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: helm-snowplow/templates/akhq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: akhq
  namespace: default
spec:
  selector:
    app: akhq
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# Source: helm-snowplow/templates/collector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "collector-backendconfig"}' # this is only required, if you run on GKE. See note in the step above.
spec:
  selector:
    app: collector
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# Source: helm-snowplow/templates/iglu-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iglu-server
  namespace: default
spec:
  selector:
    app: iglu
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# Source: helm-snowplow/templates/streamloader-postgre-pgadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamloader-postgre-pgamin
  namespace: default
spec:
  selector:
    app: streamloader-postgre-pgamin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
# Source: helm-snowplow/templates/zookeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: default
spec:
  ports:
    - port: 2181
      name: client
  clusterIP: None
  selector:
    app: zookeeper
---
# Source: helm-snowplow/templates/akhq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akhq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akhq
  template:
    metadata:
      labels:
        app: akhq
        checksum-config: a13dbd032ef5c7435db0a1f8337ffbc6c06f7b587a81935d8778294e094ebfd
    spec:
      containers:
        - name: akhq
          image: tchiotludo/akhq
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: akhq-config-volume
              mountPath: /app/application.yml
              subPath: application.yml
      volumes:
        - name: akhq-config-volume
          configMap:
            name: akhq-config
---
# Source: helm-snowplow/templates/collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
        checksum-config: 5eaa63cbde2f953bad6942894bc3906cf5cd603ae1eed55efa86e3057f6773a
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - collector
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: collector-server
          image: snowplow/scala-stream-collector-kafka:2.10.0
          command:
            - "/home/snowplow/bin/snowplow-stream-collector"
            - "--config"
            - "/snowplow/config/config.hocon"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: collector-config-volume
              mountPath: /snowplow/config
            - name: service-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
      volumes:
        - name: collector-config-volume
          configMap:
            name: collector-configmap
            items:
              - key: config.hocon
                path: config.hocon
        - name: service-account-credentials-volume
          secret:
            secretName: collector-serviceaccount-creds
            items:
              - key: sa_json
                path: sa_credentials.json
---
# Source: helm-snowplow/templates/enrich-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrich-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enrich
  template:
    metadata:
      labels:
        app: enrich
        checksum-config: c19cdb457af95e5ff4aff7d9a92d576381c8464013ac62b13d5acc3e695c2f2
    spec:
      containers:
        - name: enrich-server
          image: snowplow/snowplow-enrich-kafka:3.9.0
          command:
            - "/home/snowplow/bin/snowplow-enrich-kafka"
            - "--config"
            - "/snowplow/config/config.hocon"
            - "--iglu-config"
            - "/snowplow/config/iglu-config.json"
            - "--enrichments"
            - "/snowplow/config/enrichments"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: enrich-config-volume
              mountPath: /snowplow/config
            - name: service-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "350m"
            limits:
              memory: "1.5Gi"
      volumes:
        - name: enrich-config-volume
          configMap:
            name: enrich-configmap
            items:
              - key: iglu-config.json
                path: iglu-config.json
              - key: config.hocon
                path: config.hocon
              - key: enrichment_campaigns.json
                path: enrichments/enrichment_campaigns.json
              - key: enrichment_pii.json
                path: enrichments/enrichment_pii.json
              - key: enrichment_event_fingerprint.json
                path: enrichments/enrichment_event_fingerprint.json
              - key: enrichment_referrer_parser.json
                path: enrichments/enrichment_referrer_parser.json
              - key: enrichment_ua_parser.json
                path: enrichments/enrichment_ua_parser.json
        - name: service-account-credentials-volume
          secret:
            secretName: enrich-serviceaccount-creds
            items:
              - key: sa_json
                path: sa_credentials.json
---
# Source: helm-snowplow/templates/iglu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iglu-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iglu
  template:
    metadata:
      labels:
        app: iglu
        checksum-config: 5a1fe41d6ab7bbbafc1e5a1dbc528efca6614d9c59e98b887b3d79fb144f6f4
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: iglu-server
          image: snowplow/iglu-server:0.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          command: ["/home/snowplow/bin/iglu-server", "--config", "/snowplow/config/iglu-server.hocon"]
          volumeMounts:
            - name: iglu-config-volume
              mountPath: /snowplow/config
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1.5Gi"
      volumes:
        - name: iglu-config-volume
          configMap:
            name: iglu
            items:
              - key: iglu-server.hocon
                path: iglu-server.hocon
---
# Source: helm-snowplow/templates/streamloader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamloader-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamloader
  template:
    metadata:
      labels:
        app: streamloader
        checksum-config: 00900bb9984048ce1c434f7d4f58c2c28dc840a501c643caee6ee295a777384
    spec:
      containers:
        - name: streamloader-server
          image: snowplow/snowplow-postgres-loader:0.3.3
          command:
            - "/opt/snowplow/bin/snowplow-postgres-loader"
            - "--config"
            - "/snowplow/config/config.hocon"
            - "--resolver"
            - "/snowplow/config/iglu-config.json"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: streamloader-config-volume
              mountPath: /snowplow/config
            - name: service-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
      volumes:
        - name: streamloader-config-volume
          configMap:
            name: streamloader-configmap
            items:
              - key: iglu-config.json
                path: iglu-config.json
              - key: config.hocon
                path: config.hocon
        - name: service-account-credentials-volume
          secret:
            secretName: bqloader-serviceaccount-creds
            items:
              - key: sa_json
                path: sa_credentials.json
---
# Source: helm-snowplow/templates/streamloader-postgre-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamloader-postgre-pgamin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamloader-postgre-pgamin
  template:
    metadata:
      labels:
        app: streamloader-postgre-pgamin
    spec:
      containers:
        - name: streamloader-postgre-pgamin
          image: dpage/pgadmin4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---
# Source: helm-snowplow/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgres
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgres
    helm.sh/chart: postgresql-11.9.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  replicas: 1
  serviceName: release-name-postgres-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: release-name-postgres
      labels:
        app.kubernetes.io/name: postgres
        helm.sh/chart: postgresql-11.9.13
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
      annotations:
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgres
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:14.5.0-debian-11-r35
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "iglu" -d "dbname=iglu" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "iglu" -d "dbname=iglu" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
---
# Source: helm-snowplow/templates/zookeeper-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: default
spec:
  serviceName: "zookeeper"
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: zookeeper:3.4.9
          ports:
            - containerPort: 2181
              name: client
---
# Source: helm-snowplow/templates/akhq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq
  namespace: default
spec:
  tls:
    - hosts:
        - akhq.com
  rules:
    - host: akhq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  number: 8080
---
# Source: helm-snowplow/templates/collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowplow
  namespace: default
spec:
  tls:
    - hosts:
        - snowplow.com
  rules:
    - host: snowplow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collector
                port:
                  number: 8080
---
# Source: helm-snowplow/templates/streamloader-postgre-pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamloader-postgre-pgamin
  namespace: default
spec:
  tls:
    - hosts:
        - postgre.snowplow.com
  rules:
    - host: postgre.snowplow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamloader-postgre-pgamin
                port:
                  number: 80
